#53 Added essential material check for arrows. Collecting simpleEssentialMaterials status.

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -765,6 +765,20 @@
 
                             <tr class="design-row">
                                 <td style="width: 150px">
+                                    Shaft Material Essential
+                                </td>
+                                <td>
+                                    <input type="checkbox" name="data.bowDesign.arrow.materialEssential" {{checked data.data.bowDesign.arrow.materialEssential}} data-dtype="Boolean"/>
+                                </td>
+                                <td class="question-container" id="shaft-material-essential">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="width: 150px">
                                     Arrow Quality:
                                 </td>
                                 <td>
